CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE(FindPkgConfig)

# GLEW
FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})

# OpenGL
FIND_PACKAGE(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

# SDL
PKG_CHECK_MODULES(SDL2 REQUIRED sdl2 SDL2_net)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
LINK_DIRECTORIES(${SDL2_LIBRARY_DIRS})

SET (QWRT_SLASHER_SOURCES
	Camera.cpp
	CTextParser.cpp
	CTexture.cpp
	CTextureGL.cpp
	CVector2.cpp
	CVector3.cpp
	Engine.cpp
	Etc1.cpp
	Font.cpp
	lz4-r123/lz4.c
	MinClient.cpp
	NetworkStuff.cpp
	OpenGLES2stuff.cpp
	OpenGLstuff.cpp
	ProfileLogHandler.cpp
	Profiler.cpp
	rg_etc1.cpp
	SDLstuff.cpp
    )

SET(SSE_FLAGS "-msse -msse2 -msse3 -mssse3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ${SSE_FLAGS}")

ADD_EXECUTABLE(minclient ${QWRT_SLASHER_SOURCES})
TARGET_LINK_LIBRARIES(minclient ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})

